# telegram-currency-rate

./: .env  .gitignore  .mypy.ini  .pylintrc  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/: controller.py  service.py
app/application/settings/: config.py  config.toml
app/core/: constants.py
app/core/settings/: config.py
app/domain/: exceptions.py  value_object.py
app/domain/interfaces/: repository.py  service.py
app/infrastructure/: exceptions.py  repository.py  service.py
app/infrastructure/ioc/: container.py  provider.py
