[tool.poetry]
name = "telegram-currency-rate"
version = "1.0.0"
description = "Simple Telegram Bot of Currency Rate example"
authors = ["Pankoff <fra1tube@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
toml = "^0.10.2"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"
mypy = "^1.1.1"
types-toml = "^0.10.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
